welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
        if(c == pink) {
        	avance()
        }
    }
   
def isFacingTrail():Boolean = {
	var solRose:Boolean = false
	if(!estFaceMur) {
		avance()
		if(getCouleurSol == Color.pink) {
			solRose = true
		}
		recule()
	}
	return solRose
}
